FIX 1 more spacing is needed between chart and stats and when days start - move down page slightly like design 2 the chart on this page needs to be centred more and moved down the page slightly - please see design

--- a/src/app/pages/meal-planner/meal-planner.page.scss
+++ b/src/app/pages/meal-planner/meal-planner.page.scss
@@ -4,7 +4,7 @@
     display: flex;
     flex-direction: column;
     //height: calc(100% - 66px);
-    padding-top: 0px;
+    padding-top: 30px;
     background: $white;
 
     border-top-right-radius: 15px;
@@ -16,6 +16,7 @@
         justify-content: space-between;
         align-items: center;
         padding: 22px 32px;
+        margin-bottom: 23px;
         // border-bottom: 0.5px solid $gray;
 
         ion-button {
@@ -32,6 +33,7 @@
 
         &--p0 {
             padding: 0;
+            margin-bottom: 0;
         }
     }
 
@@ -185,7 +187,7 @@ ion-card {
 
     &__cell {
         display: table-cell;
-        padding: 5px 12px;
+        padding: 5px 14px;
 
         &:first-of-type {
             font-family: $font-family-oswald;
